# aiqa

./: .env  .gitignore  AGENTS.md  Cargo.toml  deny.toml
apps/biz-metadata/: Cargo.toml  build.rs
apps/biz-metadata-migration/: Cargo.toml
apps/biz-metadata-migration/src/: lib.rs  m20251128_171016_create_table_biz_metadata.rs  m20251128_171200_create_table_biz_metadata_alias.rs  main.rs
apps/biz-metadata/src/: lib.rs  main.rs
apps/biz-metadata/src/application/service/: mod.rs
apps/biz-metadata/src/application/service/biz_metadata/: mod.rs  service.rs
apps/biz-metadata/src/application/service/biz_metadata/command/: create_biz_metadata_command.rs  mod.rs  update_biz_metadata_command.rs
apps/biz-metadata/src/application/service/biz_metadata/query/: mod.rs  (+1 more)
apps/biz-metadata/src/application/service/biz_metadata_alias/: mod.rs  service.rs
apps/biz-metadata/src/domain/: mod.rs
apps/biz-metadata/src/domain/biz_metadata/: mod.rs  repository.rs
apps/biz-metadata/src/domain/biz_metadata/aggregate/: biz_metadata.rs  mod.rs
apps/biz-metadata/src/domain/biz_metadata/value_object/: biz_metadata_code.rs  biz_metadata_id.rs  biz_metadata_name.rs  biz_metadata_status.rs  biz_metadata_type.rs  data_class.rs  mod.rs  object_type.rs  source.rs  tenant_id.rs  unit.rs  value_type.rs  version.rs
apps/biz-metadata/src/domain/biz_metadata_alias/: mod.rs  repository.rs
apps/biz-metadata/src/domain/biz_metadata_alias/aggregate/: biz_metadata_alias.rs  mod.rs
apps/biz-metadata/src/domain/biz_metadata_alias/value_object/: alias_id.rs  alias_source.rs  alias_text.rs  alias_weight.rs  language_code.rs  mod.rs
apps/biz-metadata/src/infrastructure/persistence/: mod.rs  query.rs
apps/biz-metadata/src/infrastructure/persistence/entity/: biz_metadata.rs  biz_metadata_alias.rs  mod.rs  prelude.rs
apps/biz-metadata/src/infrastructure/persistence/mapper/: biz_metadata_alias_mapping.rs  biz_metadata_mapping.rs  mod.rs
apps/biz-metadata/src/infrastructure/persistence/repository/: biz_metadata_alias_repository_impl.rs  biz_metadata_repository_impl.rs  mod.rs
apps/biz-metadata/src/interface/http/: error.rs  handler.rs  mod.rs  router.rs  state.rs
apps/biz-metadata/src/interface/http/handler/: biz_metadata.rs  biz_metadata_alias.rs  mod.rs
apps/biz-metadata/src/interface/http/mapper/: biz_metadata_alias_mapper.rs  biz_metadata_mapper.rs  error_mapper.rs  mod.rs
apps/biz-metadata/src/interface/http/router/: biz_metadata.rs  mod.rs  router.rs
apps/metadata/: Cargo.toml
apps/metadata/src/: lib.rs
apps/metadata/src/application/service/: mod.rs
apps/metadata/src/application/service/metadata/: command.rs  mod.rs  query.rs  service.rs
apps/metadata/src/application/service/metadata_relation/: command.rs  mod.rs  query.rs  service.rs
apps/metadata/src/domain/metadata/: metadata.rs  mod.rs  model.rs  repository.rs
apps/metadata/src/domain/metadata/aggregate/: metadata.rs  mod.rs
apps/metadata/src/domain/metadata/value_object/: metadata_capabilities.rs  metadata_code.rs  metadata_id.rs  metadata_name.rs  metadata_type.rs  value_type.rs
apps/metadata/src/domain/metadata_relation/: mod.rs  repository.rs
apps/metadata/src/domain/metadata_relation/aggregate/: metadata_relation.rs  mod.rs
apps/metadata/src/domain/metadata_relation/value_object/: metadata_relation_id.rs  mod.rs
apps/metadata/src/infrastructure/: mod.rs
apps/metadata/src/infrastructure/mapper/: metadata_mapping.rs  metadata_relation_mapping.rs  mod.rs
apps/metadata/src/infrastructure/persistence/: mod.rs  query.rs
apps/metadata/src/infrastructure/persistence/entity/: metadata.rs  prelude.rs  sea_orm_active_enums.rs
apps/metadata/src/infrastructure/persistence/mapper/: metadata_mapping.rs  metadata_relation_mapping.rs  mod.rs
apps/metadata/src/infrastructure/persistence/repository/: future.rs  metadata_relation_repository_impl.rs  metadata_repository_impl.rs  mod.rs
apps/metadata/src/infrastructure/repository/: future.rs  metadata_relation_repository_impl.rs  metadata_repository_impl.rs  mod.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: aggregate_root.rs  audit.rs  domain_error.rs  expression.rs  lib.rs  pagination.rs  prelude.rs  repository.rs  value_object.rs
crates/domain-core/src/core/: aggregate_root.rs  entity.rs  mod.rs  repository.rs  value_object.rs
crates/domain-core/src/error/: domain_error.rs  mod.rs
crates/domain-core/src/shared/: audit.rs  expression.rs  mod.rs  pagination.rs  validation.rs
crates/domain-core/tests/: expression_tests.rs  pagination_tests.rs
docs/: test.md  (+12 more)
(+68 files in other folders)
