[package]
name = "biz-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI问答系统的元数据模块"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = true }
domain-core = { path = "../../crates/domain-core" }
sea-orm = "2.0.0-rc.20"
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

[dev-dependencies]

[build-dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
