[package]
name = "metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI问答系统的元数据模块"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = true }
domain-core = { path = "../../crates/domain-core" }
serde_json = "1.0"
sea-orm = "2.0.0-rc.19"

[dev-dependencies]
