[package]
name = "domain-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "领域模型核心模块"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = true }
thiserror = "2"

[dev-dependencies]
